--- a/WardrobeMVCProject/Views/Tops/Details.cshtml
+++ b/WardrobeMVCProject/Views/Tops/Details.cshtml
@@ -3,64 +3,70 @@
 @{
     ViewBag.Title = "Details";
 }
+<div class="container" id="topsdetails">
+    
+    <h2>Details</h2>
 
-<h2>Details</h2>
+    <div>
+        <h4>Top</h4>
+        <hr />
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    
+                        @Html.DisplayNameFor(model => model.Name)
+                    
+                </div>
+                <div class="col">
+                    @Html.DisplayFor(model => model.Name)
+                </div>
 
-<div>
-    <h4>Top</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+                <div class="col">
+                    @Html.DisplayNameFor(model => model.Photo)
+                </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+                <div class="col">
+                    @Html.DisplayFor(model => model.Photo)
+                </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Photo)
-        </dt>
+                <div class="col">
+                    @Html.DisplayNameFor(model => model.Type)
+                </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Photo)
-        </dd>
+                <div class="col">
+                    @Html.DisplayFor(model => model.Type)
+                </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Type)
-        </dt>
+                <div class="col">
+                    @Html.DisplayNameFor(model => model.Color)
+                </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Type)
-        </dd>
+                <div class="col">
+                    @Html.DisplayFor(model => model.Color)
+                </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Color)
-        </dt>
+                <div class="col">
+                    @Html.DisplayNameFor(model => model.Season)
+                </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Color)
-        </dd>
+                <div class="col"> 
+                    @Html.DisplayFor(model => model.Season)
+                </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Season)
-        </dt>
+                <div class="col">
+                    @Html.DisplayNameFor(model => model.Occasion)
+                </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Season)
-        </dd>
+                <div class="col">
+                    @Html.DisplayFor(model => model.Occasion)
+                </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Occasion)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Occasion)
-        </dd>
-
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.TopsID }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+               
+            </div>
+        </div>
+        <p>
+            @Html.ActionLink("Edit", "Edit", new { id = Model.TopsID }) |
+            @Html.ActionLink("Back to List", "Index")
+        </p>
+    </div>
+    </div>
