--- a/WardrobeMVCProject/Views/Accessories/Delete.cshtml
+++ b/WardrobeMVCProject/Views/Accessories/Delete.cshtml
@@ -3,70 +3,83 @@
 @{
     ViewBag.Title = "Delete";
 }
+<div class="container" id="accessoriesdelete">
+    <h2>Delete</h2>
 
-<h2>Delete</h2>
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <h4>Accessory</h4>
+        <hr />
+        <div class="container">
+            <div class="row">
+                <div class="col">
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Accessory</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+                    @Html.DisplayNameFor(model => model.Name)
+                </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+                <div class="col">
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Photo)
-        </dt>
+                    @Html.DisplayFor(model => model.Name)
+                </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Photo)
-        </dd>
+                    <div class="col">
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Type)
-        </dt>
+                        @Html.DisplayNameFor(model => model.Photo)
+                  </div>
+                    <div class="col">
 
-        <dd>
-            @Html.DisplayFor(model => model.Type)
-        </dd>
+                        @Html.DisplayFor(model => model.Photo)
+                    </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Color)
-        </dt>
+                    <div class="col">
 
-        <dd>
-            @Html.DisplayFor(model => model.Color)
-        </dd>
+                        @Html.DisplayNameFor(model => model.Type)
+                    </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Season)
-        </dt>
+                    <div class="col">
 
-        <dd>
-            @Html.DisplayFor(model => model.Season)
-        </dd>
+                        @Html.DisplayFor(model => model.Type)
+                    </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Occasion)
-        </dt>
+                    <div class="col">
 
-        <dd>
-            @Html.DisplayFor(model => model.Occasion)
-        </dd>
+                        @Html.DisplayNameFor(model => model.Color)
+                    </div>
 
-    </dl>
+                    <div class="col">
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
+                        @Html.DisplayFor(model => model.Color)
+                    </div>
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+                    <div class="col">
+
+                        @Html.DisplayNameFor(model => model.Season)
+                    </div>
+
+                    <div class="col">
+
+                        @Html.DisplayFor(model => model.Season)
+                    </div>
+
+                    <div class="col">
+
+                        @Html.DisplayNameFor(model => model.Occasion)
+                    </div>
+
+                    <div class="col">
+
+                        @Html.DisplayFor(model => model.Occasion)
+                    </div>
+                </div>
+            </div>
         </div>
-    }
-</div>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+
+            <div class="form-actions no-color">
+                <input type="submit" value="Delete" class="btn btn-default" /> |
+                @Html.ActionLink("Back to List", "Index")
+            </div>
+        }
+    </div>
