--- a/WardrobeMVCProject/Views/Bottoms/Details.cshtml
+++ b/WardrobeMVCProject/Views/Bottoms/Details.cshtml
@@ -3,64 +3,80 @@
 @{
     ViewBag.Title = "Details";
 }
+<div class="container" id="bottomsdetails">
+    <h2>Details</h2>
 
-<h2>Details</h2>
-
-<div>
-    <h4>Bottom</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Photo)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Photo)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Type)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Type)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Color)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Color)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Season)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Season)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Occasion)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Occasion)
-        </dd>
-
-    </dl>
+    <div>
+        <h4>Bottom</h4>
+        <hr />
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    
+                        @Html.DisplayNameFor(model => model.Name)
+                    
+                </div>
+                <div class="col">
+                    
+                        @Html.DisplayFor(model => model.Name)
+                    
+                </div>
+                <div class="col">
+                    
+                        @Html.DisplayNameFor(model => model.Photo)
+                    
+                </div>
+                <div class="col">
+                    
+                        @Html.DisplayFor(model => model.Photo)
+                    
+                </div>
+                <div class="col">
+                    
+                        @Html.DisplayNameFor(model => model.Type)
+                    
+                </div>
+                <div class="col">
+                    
+                        @Html.DisplayFor(model => model.Type)
+                    
+                </div>
+                <div class="col">
+                    
+                        @Html.DisplayNameFor(model => model.Color)
+                    
+                </div>
+                <div class="col">
+                    
+                        @Html.DisplayFor(model => model.Color)
+                    
+                </div>
+                <div class="col">
+                    
+                        @Html.DisplayNameFor(model => model.Season)
+                    
+                </div>
+                <div class="col">
+                    
+                        @Html.DisplayFor(model => model.Season)
+                    
+                </div>
+                <div class="col">
+                    
+                        @Html.DisplayNameFor(model => model.Occasion)
+                    
+                </div>
+                <div class="col">
+                    
+                        @Html.DisplayFor(model => model.Occasion)
+                    
+                </div>
+                
+            </div>
+        </div>
+    </div>
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.BottomsID }) |
+        @Html.ActionLink("Back to List", "Index")
+    </p>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.BottomsID }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
