--- a/WardrobeMVCProject/Views/Tops/Delete.cshtml
+++ b/WardrobeMVCProject/Views/Tops/Delete.cshtml
@@ -3,70 +3,75 @@
 @{
     ViewBag.Title = "Delete";
 }
+<div class="container" id="topsdelete">
+    <h2>Delete</h2>
 
-<h2>Delete</h2>
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <h4>Top</h4>
+        <hr />
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    
+                        @Html.DisplayNameFor(model => model.Name)
+                    
+                </div>
+                <div class="col">
+                    @Html.DisplayFor(model => model.Name)
+                </div>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Top</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+                <div class="col">
+                    @Html.DisplayNameFor(model => model.Photo)
+                </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+                <div class="col">
+                    @Html.DisplayFor(model => model.Photo)
+                </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Photo)
-        </dt>
+                <div class="col">
+                    @Html.DisplayNameFor(model => model.Type)
+                </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Photo)
-        </dd>
+                <div class="col">
+                    @Html.DisplayFor(model => model.Type)
+                </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Type)
-        </dt>
+                <div class="col">
+                    @Html.DisplayNameFor(model => model.Color)
+                </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Type)
-        </dd>
+                <div class="col">
+                    @Html.DisplayFor(model => model.Color)
+                </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Color)
-        </dt>
+                <div class="col">
+                    @Html.DisplayNameFor(model => model.Season)
+                </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Color)
-        </dd>
+                <div class="col">
+                    @Html.DisplayFor(model => model.Season)
+                </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Season)
-        </dt>
+                <div class="col">
+                    @Html.DisplayNameFor(model => model.Occasion)
+                </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Season)
-        </dd>
+                <div class="col">
+                    @Html.DisplayFor(model => model.Occasion)
+                </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Occasion)
-        </dt>
+              
+            </div>
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
 
-        <dd>
-            @Html.DisplayFor(model => model.Occasion)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+                <div class="form-actions no-color">
+                    <input type="submit" value="Delete" class="btn btn-default" /> |
+                    @Html.ActionLink("Back to List", "Index")
+                </div>
+            }
         </div>
-    }
+    </div>
 </div>
