--- a/WardrobeMVCProject/Views/Bottoms/Index.cshtml
+++ b/WardrobeMVCProject/Views/Bottoms/Index.cshtml
@@ -5,89 +5,95 @@
 }
 <div class="container" id="bottomsindex">
     <h2>Index</h2>
-
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
     <p>
         @Html.ActionLink("Create New", "Create")
     </p>
     <div class="container">
         <div class="row">
             <div class="col">
-                
-                    
-                        @Html.DisplayNameFor(model => model.Name)
-                    
+
+
+                @Html.DisplayNameFor(model => model.Name)
+
             </div>
             <div class="col">
-                
-                    @Html.DisplayNameFor(model => model.Photo)
-                
+
+                @Html.DisplayNameFor(model => model.Photo)
+
             </div>
             <div class="col">
-                
-                    @Html.DisplayNameFor(model => model.Type)
-                
+
+                @Html.DisplayNameFor(model => model.Type)
+
             </div>
             <div class="col">
-                
-                    @Html.DisplayNameFor(model => model.Color)
-                
+
+                @Html.DisplayNameFor(model => model.Color)
+
             </div>
             <div class="col">
-                
-                    @Html.DisplayNameFor(model => model.Season)
-               
+
+                @Html.DisplayNameFor(model => model.Season)
+
             </div>
             <div class="col">
-                
-                    @Html.DisplayNameFor(model => model.Occasion)
-                
+
+                @Html.DisplayNameFor(model => model.Occasion)
+
             </div>
-           
+
         </div>
     </div>
     <div class="container">
         @foreach (var item in Model)
         {<div class="row">
-             <div class="col">
-                 
-                     @Html.DisplayFor(modelItem => item.Name)
-                 
-             </div>
-             <div class="col">
-                 
-                     @Html.DisplayFor(modelItem => item.Photo)
-                 
-             </div>
-             <div class="col">
-                
-                     @Html.DisplayFor(modelItem => item.Type)
-                 
-             </div>
-             <div class="col">
-                 
-                     @Html.DisplayFor(modelItem => item.Color)
-                 
-             </div>
-             <div class="col">
-                 
-                     @Html.DisplayFor(modelItem => item.Season)
-                 
-             </div>
-             <div class="col">
-                 
-                     @Html.DisplayFor(modelItem => item.Occasion)
-                 
-             </div>
-             <div class="col">
-                 
-                     @Html.ActionLink("Edit", "Edit", new { id = item.BottomsID }) |
-                     @Html.ActionLink("Details", "Details", new { id = item.BottomsID }) |
-                     @Html.ActionLink("Delete", "Delete", new { id = item.BottomsID })
-                 
-             </div>
-    
-</div>
+                <div class="col">
+
+                    @Html.DisplayFor(modelItem => item.Name)
+
+                </div>
+                <div class="col">
+
+                    @Html.DisplayFor(modelItem => item.Photo)
+
+                </div>
+                <div class="col">
+
+                    @Html.DisplayFor(modelItem => item.Type)
+
+                </div>
+                <div class="col">
+
+                    @Html.DisplayFor(modelItem => item.Color)
+
+                </div>
+                <div class="col">
+
+                    @Html.DisplayFor(modelItem => item.Season)
+
+                </div>
+                <div class="col">
+
+                    @Html.DisplayFor(modelItem => item.Occasion)
+
+                </div>
+                <div class="col">
+
+                    <button class="button" id="botindexbutton"> @Html.ActionLink("Edit", "Edit", new { id = item.BottomsID }) |</button>
+                    @Html.ActionLink("Details", "Details", new { id = item.BottomsID }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.BottomsID })
+
+                </div>
+
+            </div>
         }
     </div>
-    
+
 </div>
