--- a/WardrobeMVCProject/Views/Accessories/Details.cshtml
+++ b/WardrobeMVCProject/Views/Accessories/Details.cshtml
@@ -8,75 +8,87 @@
 
     <div>
         <h4>Accessory</h4>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
         <hr />
         <div class="container">
             <div class="row">
                 <div class="col">
-                    
-                        @Html.DisplayNameFor(model => model.Name)
-                    
+
+                    @Html.DisplayNameFor(model => model.Name)
+
                 </div>
                 <div class="col">
-                    
-                        @Html.DisplayFor(model => model.Name)
-                    
+
+                    @Html.DisplayFor(model => model.Name)
+
                 </div>
                 <div class="col">
-                    
-                        @Html.DisplayNameFor(model => model.Photo)
-                    
+
+                    @Html.DisplayNameFor(model => model.Photo)
+
                 </div>
                 <div class="col">
-                    
-                        @Html.DisplayFor(model => model.Photo)
-                    
+
+                    @Html.DisplayFor(model => model.Photo)
+
                 </div>
                 <div class="col">
-                    
-                        @Html.DisplayNameFor(model => model.Type)
-                    
+
+                    @Html.DisplayNameFor(model => model.Type)
+
                 </div>
                 <div class="col">
-                    
-                        @Html.DisplayFor(model => model.Type)
-                    
+
+                    @Html.DisplayFor(model => model.Type)
+
                 </div>
                 <div class="col">
-                    
-                        @Html.DisplayNameFor(model => model.Color)
-                    
+
+                    @Html.DisplayNameFor(model => model.Color)
+
                 </div>
                 <div class="col">
-                    
-                        @Html.DisplayFor(model => model.Color)
-                   
+
+                    @Html.DisplayFor(model => model.Color)
+
                 </div>
                 <div class="col">
-                    
-                        @Html.DisplayNameFor(model => model.Season)
-                    
+
+                    @Html.DisplayNameFor(model => model.Season)
+
                 </div>
                 <div class="col">
-                    
-                        @Html.DisplayFor(model => model.Season)
-                   
+
+                    @Html.DisplayFor(model => model.Season)
+
                 </div>
                 <div class="col">
-                    
-                        @Html.DisplayNameFor(model => model.Occasion)
-                    
+
+                    @Html.DisplayNameFor(model => model.Occasion)
+
                 </div>
                 <div class="col">
-                    
-                        @Html.DisplayFor(model => model.Occasion)
-                    
+
+                    @Html.DisplayFor(model => model.Occasion)
+
                 </div>
-              
+
             </div>
         </div>
     </div>
     <p>
-        @Html.ActionLink("Edit", "Edit", new { id = Model.AccessoriesID }) |
-        @Html.ActionLink("Back to List", "Index")
-    </p>
+     <button class="button" id="accdetailsbutton">  @Html.ActionLink("Edit", "Edit", new { id = Model.AccessoriesID }) |</button>
+     <button class="button" id="accdetailsbutton">  @Html.ActionLink("Back to List", "Index")</button>
+</p>
 </div>
