--- a/WardrobeMVCProject/Views/Shoes/Details.cshtml
+++ b/WardrobeMVCProject/Views/Shoes/Details.cshtml
@@ -8,61 +8,73 @@
 
 
     <h4>Sho</h4>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
     <hr />
 
     <div class="container">
         <div class="row">
             <div class="col">
-                
-                    @Html.DisplayNameFor(model => model.Name)
-                </div>
 
-                <div class="col">
-                    @Html.DisplayFor(model => model.Name)
-                </div>
+                @Html.DisplayNameFor(model => model.Name)
+            </div>
 
-                <div class="col">
-                    @Html.DisplayNameFor(model => model.Photo)
-                </div>
+            <div class="col">
+                @Html.DisplayFor(model => model.Name)
+            </div>
 
-                <div class="col">
-                    @Html.DisplayFor(model => model.Photo)
-                </div>
+            <div class="col">
+                @Html.DisplayNameFor(model => model.Photo)
+            </div>
 
-                <div class="col"> 
-                    @Html.DisplayNameFor(model => model.Type)
-                </div>
+            <div class="col">
+                @Html.DisplayFor(model => model.Photo)
+            </div>
 
-                <div class="col">
-                    @Html.DisplayFor(model => model.Type)
-                </div>
-        
-                <div class="col">
-                    @Html.DisplayNameFor(model => model.Color)
-                </div>
+            <div class="col">
+                @Html.DisplayNameFor(model => model.Type)
+            </div>
 
-                <div class="col">
-                    @Html.DisplayFor(model => model.Color)
-                </div>
+            <div class="col">
+                @Html.DisplayFor(model => model.Type)
+            </div>
 
-                <div class="col">
-                    @Html.DisplayNameFor(model => model.Season)
-                </div>
+            <div class="col">
+                @Html.DisplayNameFor(model => model.Color)
+            </div>
 
-                <div class="col">
-                    @Html.DisplayFor(model => model.Season)
-                </div>
+            <div class="col">
+                @Html.DisplayFor(model => model.Color)
+            </div>
 
-                <div class="col">
-                    @Html.DisplayNameFor(model => model.Occasion)
-                </div>
+            <div class="col">
+                @Html.DisplayNameFor(model => model.Season)
+            </div>
 
-                <div class="col">
-                    @Html.DisplayFor(model => model.Occasion)
-                </div>
+            <div class="col">
+                @Html.DisplayFor(model => model.Season)
+            </div>
+
+            <div class="col">
+                @Html.DisplayNameFor(model => model.Occasion)
+            </div>
+
+            <div class="col">
+                @Html.DisplayFor(model => model.Occasion)
+            </div>
         </div>
         <p>
-            @Html.ActionLink("Edit", "Edit", new { id = Model.ShoesID }) |
+            <button class="button" id="shoedetailsbutton">    @Html.ActionLink("Edit", "Edit", new { id = Model.ShoesID }) |</button>
             @Html.ActionLink("Back to List", "Index")
         </p>
     </div>
