--- a/WardrobeMVCProject/Views/Tops/Details.cshtml
+++ b/WardrobeMVCProject/Views/Tops/Details.cshtml
@@ -9,13 +9,25 @@
 
     <div>
         <h4>Top</h4>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
         <hr />
         <div class="container">
             <div class="row">
                 <div class="col">
-                    
-                        @Html.DisplayNameFor(model => model.Name)
-                    
+
+                    @Html.DisplayNameFor(model => model.Name)
+
                 </div>
                 <div class="col">
                     @Html.DisplayFor(model => model.Name)
@@ -49,7 +61,7 @@
                     @Html.DisplayNameFor(model => model.Season)
                 </div>
 
-                <div class="col"> 
+                <div class="col">
                     @Html.DisplayFor(model => model.Season)
                 </div>
 
@@ -61,11 +73,11 @@
                     @Html.DisplayFor(model => model.Occasion)
                 </div>
 
-               
+
             </div>
         </div>
         <p>
-            @Html.ActionLink("Edit", "Edit", new { id = Model.TopsID }) |
+            <button class="button" id="topdetailsbutton">      @Html.ActionLink("Edit", "Edit", new { id = Model.TopsID }) |</button>
             @Html.ActionLink("Back to List", "Index")
         </p>
     </div>
