--- a/WardrobeMVCProject/Views/Tops/Index.cshtml
+++ b/WardrobeMVCProject/Views/Tops/Index.cshtml
@@ -9,62 +9,69 @@
     <p>
         @Html.ActionLink("Create New", "Create")
     </p>
-<div class="container">
-    <div class="row">
-        <div class="col">
-            
-                    @Html.DisplayNameFor(model => model.Name)
-              
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+
+                @Html.DisplayNameFor(model => model.Name)
+
+            </div>
+            <div class="col">
+                @Html.DisplayNameFor(model => model.Photo)
+            </div>
+            <div class="col">
+                @Html.DisplayNameFor(model => model.Type)
+            </div>
+            <div class="col">
+                @Html.DisplayNameFor(model => model.Color)
+            </div>
+            <div class="col">
+                @Html.DisplayNameFor(model => model.Season)
+            </div>
+            <div class="col">
+                @Html.DisplayNameFor(model => model.Occasion)
+            </div>
+
+            <div class="container">
+                @foreach (var item in Model)
+                {<div class="row">
+                        <div class="col">
+
+                            @Html.DisplayFor(modelItem => item.Name)
+
+                        </div>
+                        <div class="col">
+                            @Html.DisplayFor(modelItem => item.Photo)
+                        </div>
+                        <div class="col">
+                            @Html.DisplayFor(modelItem => item.Type)
+                        </div>
+                        <div class="col">
+                            @Html.DisplayFor(modelItem => item.Color)
+                        </div>
+                        <div class="col">
+                            @Html.DisplayFor(modelItem => item.Season)
+                        </div>
+                        <div class="col">
+                            @Html.DisplayFor(modelItem => item.Occasion)
+                        </div>
+                        <div class="col">
+                            @Html.ActionLink("Edit", "Edit", new { id = item.TopsID }) |
+                            @Html.ActionLink("Details", "Details", new { id = item.TopsID }) |
+                            <button class="button" id="topindexbutton">  @Html.ActionLink("Delete", "Delete", new { id = item.TopsID })</button>
+                        </div>
+
+                    </div>
+                }
+            </div>
         </div>
-        <div class="col">
-            @Html.DisplayNameFor(model => model.Photo)
-        </div>
-        <div class="col">
-            @Html.DisplayNameFor(model => model.Type)
-        </div>
-        <div class="col">
-            @Html.DisplayNameFor(model => model.Color)
-        </div>
-        <div class="col">
-            @Html.DisplayNameFor(model => model.Season)
-        </div>
-        <div class="col">
-            @Html.DisplayNameFor(model => model.Occasion)
-        </div>
-       
-        <div class="container">
-            @foreach (var item in Model)
-            {<div class="row">
-                 <div class="col">
-        
-                @Html.DisplayFor(modelItem => item.Name)
-           
     </div>
-    <div class="col">
-                @Html.DisplayFor(modelItem => item.Photo)
-    </div>
-    <div class="col">
-                 @Html.DisplayFor(modelItem => item.Type)
-    </div>
-    <div class="col">
-                @Html.DisplayFor(modelItem => item.Color)
-    </div>
-    <div class="col">
-                @Html.DisplayFor(modelItem => item.Season)
-    </div>
-    <div class="col">
-                @Html.DisplayFor(modelItem => item.Occasion)
-    </div>
-    <div class="col">
-        @Html.ActionLink("Edit", "Edit", new { id = item.TopsID }) |
-        @Html.ActionLink("Details", "Details", new { id = item.TopsID }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.TopsID })
-    </div>
-    
-</div>
-            }
-        </div>
-    </div>
-        </div>
-   
+
 </div>
